force-app/main/default/objects/Log__e/Log__e.object-meta.xml
<CustomObject>
    <description>Capture Logs</description>
    <label>Log</label>
    <pluralLabel>Logs</pluralLabel>
</CustomObject>