force-app/main/default/objects/Log__e/fields/Quiddity__c.field-meta.xml
<CustomField>
    <fullName>Quiddity__c</fullName>
    <description>n scholastic philosophy, &quot;quiddity&quot; (/ˈkwɪdɪti/; Latin: quidditas)[1] was another term for the essence of an object, literally its &quot;whatness&quot; or &quot;what it is&quot;.</description>
    <label>Quiddity</label>
    <length>32</length>
    <type>Text</type>
</CustomField>