force-app/main/default/objects/Log__e/fields/Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Id__c</fullName>
    <description>Request Id for Correlation</description>
    <label>Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>